--- a/auto.yml
+++ b/auto.yml
@@ -1,12 +1,14 @@
 ---
 - hosts: all_web
   become: yes
+  gather_facts: no
 
   roles:
     - nginx
 
 - hosts: otus_back_web
   become: yes
+  gather_facts: no
 
   roles:
     - docker
@@ -14,30 +16,35 @@
 - hosts: 127.0.0.1
   connection: local
   become: yes
+  gather_facts: no
 
   roles:
     - monitoring_server
 
 - hosts: all_web
   become: yes
+  gather_facts: no
 
   roles:
     - monitoring_node
 
 - hosts: otus_back_web
   become: yes
+  gather_facts: no
 
   roles:
     - def_db
 
 - hosts: otus-web-2
   become: yes
+  gather_facts: no
 
   roles:
     - slave_db
 
 - hosts: otus-web-3
   become: yes
+  gather_facts: no
 
   roles:
     - slave_db
